--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "Parnassus Registration App",
   "main": "server.js",
   "scripts": {
+    "server": "node server.js",
+    "client": "node scripts/start-client.js",
+    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "build": "node scripts/build.js",
+    "seed": "node scripts/seedDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "installDeps": "yarn && cd client && yarn"
   },
   "repository": {
     "type": "git",
@@ -13,8 +19,30 @@
   },
   "author": "Dani Carter",
   "license": "ISC",
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "concurrently": "^3.5.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.11.0"
+  },
   "bugs": {
     "url": "https://github.com/danielaine3/ParnOrgs/issues"
   },
-  "homepage": "https://github.com/danielaine3/ParnOrgs#readme"
+  "homepage": "https://github.com/danielaine3/ParnOrgs#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "connect-mongo": "^2.0.1",
+    "express": "^4.15.4",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.11",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0"
+  }
 }
