--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.0"
+    "passport-local-mongoose": "^5.0.0",
+    "react-router-dom": "^4.3.1"
   }
 }
