--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,16 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.16.2",
+    "dotenv": "^5.0.1",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
