--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "git+ssh://git@github.com/danielaine3/ParnOrgs.git"
   },
+  "engines": {
+    "node": ">=8.7.0 <=9.9"
+  },
   "author": "Dani Carter",
   "license": "ISC",
   "devDependencies": {
@@ -37,14 +40,12 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "connect-mongo": "^2.0.1",
-    "deps": "^0.1.2",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.11",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.0",
-    "react-router-dom": "^4.3.1"
+    "passport-local-mongoose": "^5.0.0"
   }
 }
